Fixed styling bug that caused footer to creep into content when viewed on mobile. Adjusted Preamble font size and alignment.

--- a/src/index.css
+++ b/src/index.css
@@ -48,8 +48,16 @@ body {
 }
 
 .paragraph {
-  text-indent: 25px;
-  min-height: max-content;
+  font-size: 25px;
+  text-indent: 30px;
+  /* min-height: max-content; */
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  width: 75%;
+  padding-left: 9%%;
 }
 
 .hidden {
@@ -146,7 +154,7 @@ h4 {
 
 main {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -188,6 +196,7 @@ main {
   margin: 10px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   border: 10px ridge var(--gold);
   padding: 10px;
   background-color: var(--grey);
@@ -898,8 +907,12 @@ footer {
   }
 
   h3 {
-    font-size: 30px;
+    font-size: 25px;
     margin: 0;
+  }
+
+  .paragraph{
+    font-size: 20px;
   }
 
   .container {
